@@ -1,6 +1,7 @@
 Revision history for Spreadsheet-HTML
 
 0.29
+    - new param for checkerboard: extra
     - conway impacts th tags now
     - better fade for conway
     - better overrides for presets
